# flowclone

./: .gitignore  FlowClone.command  PLAN.md  README.md  config.toml  pyproject.toml
launchd/: com.flowclone.agent.plist
samples/: spike.aiff  spike_text.txt
scripts/: ax_probe.py  bench_quant.py  download_model.py  qa_check.py  repro_join.py  smoke_menubar.py  spike_benchmark.py
src/flowclone/: __init__.py  audio.py  cleanup.py  config.py  context.py  hotkey.py  hud.py  inject.py  main.py  menubar.py  stt.py
tests/: test_cleanup.py  test_context.py  test_hotkey.py
