[project]
name = "whisprflow-clone"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "parakeet-mlx>=0.5.2",
    "pyobjc-framework-applicationservices>=12.2.1",
    "pyobjc-framework-quartz>=12.2.1",
    "rumps>=0.4.0",
    "sounddevice>=0.5.5",
]

[project.scripts]
flowclone = "flowclone.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowclone"]
